# ccatv

./: .gitignore  Makefile  README.md  TODO.md  main.py  pyproject.toml
.github/workflows/: ci.yml
archlinux/: PKGBUILD
ccatv/: __init__.py  gui.py
docs/: architecture-proposal.md  discarded-and-legacy-scope.md  epg-mapping-notes.md  epg-migration-plan.md  error-handling.md  healthchecks.md  packaging.md  recorder-design-and-code-flow.md  service-api-contract.md  service_filter.md  systemd-operations.md
scripts/: ccatv-bounce-flask  ccatv-epg-daily  ccatv-restart  ccatv-start  ccatv-status  ccatv-stop  debian-build.sh  install-local-scripts.sh
src/ccatv/: __init__.py  cli.py  errors.py  logging_config.py  runtime_config.py  settings.py
src/ccatv/app/: __init__.py  bootstrap.py  recorder_worker.py  service_client.py  service_daemon.py  service_dispatcher.py
src/ccatv/metadata/: __init__.py  guide_preference.py  ota_epg.py  schedules_direct_api.py  schedules_direct_contract.py  schedules_direct_ingest.py  schedules_direct_runtime.py
src/ccatv/playback/: __init__.py  backend.py  mpv_ipc.py  service.py
src/ccatv/storage/: __init__.py  schema.py  state_store.py
src/ccatv/tvrecorder/: __init__.py  commands.py  config.py  dvbctrl.py  manager.py  orchestrator.py  postprocess.py  preflight.py  service.py
src/ccatv/ui/: __init__.py  service_gateway.py
src/ccatv/web/: __init__.py  app.py  server.py
systemd/: ccatv-api.service  ccatv-web.service  ccatv.service
tests/: test_app_info.py  test_ccatv.py  test_cli.py  test_gui.py  test_main.py  test_runtime_config.py  test_settings.py
tests/app/: test_bootstrap.py  test_recorder_worker.py  test_service_client.py  test_service_daemon.py  test_service_dispatcher.py
tests/integration/: README.md  __init__.py  runtime.py  test_live_dvbstreamer.py
tests/integration/fixtures/: epgdata_sample.txt
tests/metadata/: test_guide_preference.py  test_ota_epg.py  test_schedules_direct_api.py  test_schedules_direct_ingest.py  test_schedules_direct_runtime.py
tests/playback/: test_mpv_ipc.py  test_playback_service.py
tests/storage/: test_schema.py  test_state_store.py
tests/tvrecorder/: test_commands.py  test_config.py  test_dvbctrl.py  test_manager.py  test_orchestrator.py  test_postprocess.py  test_preflight.py  test_service.py
tests/tvrecorder/fixtures/: current_output.txt  festatus_output.txt  stats_output.txt
tests/ui/: test_service_gateway.py
tests/web/: test_app.py  test_server.py
(+4 files in other folders)
