[project]
name = "ccatv"
version = "0.1.77"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "platformdirs>=4.5.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project.scripts]
ccatv = "ccatv.cli:main"
ccatv-setup = "ccatv.cli:setup_main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]

[tool.pytest.ini_options]
addopts = "-m 'not integration'"
markers = [
    "integration: live tests requiring external dvbstreamer/dvbctrl environment",
]
