[project]
name = "ccatv"
version = "0.1.289"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "GPL-3.0-or-later" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
dependencies = [
    "flask>=3.1.0",
    "platformdirs>=4.5.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project.scripts]
ccatv = "ccatv.cli:main"
ccatv-setup = "ccatv.cli:setup_main"
ccatv-status = "ccatv.cli:status_main"
ccatv-recorder-worker = "ccatv.app.recorder_worker:main"
ccatv-service = "ccatv.app.service_daemon:main"
ccatv-web = "ccatv.web.server:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]

[tool.pytest.ini_options]
addopts = "-m 'not integration'"
markers = [
    "integration: live tests requiring external dvbstreamer/dvbctrl environment",
]

[tool.ruff.format]
preview = true
